(lang dune 3.11)

(name mlrpn)

(generate_opam_files true)

(source
 ; (codeberg orest58008/mlrpn)
 (github orest58008/mlrpn))

(authors "Orest I")

; (maintainers "Maintainer Name")

(license "BSD-2-Clause")

; (documentation https://url/to/documentation)

(package
 (name mlrpn)
 (synopsis "A simple RPN calculator")
 ; (description "A longer description")
 (depends ocaml dune)
 ; (tags
										; (topics "to describe" your project))
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
